// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "medium", compact: false, open: false and theme: light 1`] = `
":host {
  display: block !important;
  border-bottom: 1px solid #D8D8DB !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 20px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 6px;
  bottom: 6px;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility var(--p-motion-duration, 0s) linear var(--p-motion-duration, 0.25s);
}
.collapsible div {
  overflow: hidden;
  animation: none;
  padding: 4px;
  margin: -4px;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: false, open: true and theme: light 1`] = `
":host {
  display: block !important;
  border-bottom: 1px solid #D8D8DB !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 20px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 6px;
  bottom: 6px;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0);
  transition: transform var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 1fr;
  visibility: visible;
  transition: grid-template-rows var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding-bottom: 24px;
}
.collapsible div {
  overflow: visible;
  animation: keyframes-overflow var(--p-motion-duration,0.25s);
  padding: 4px;
  margin: -4px;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: true, open: false and theme: dark 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #FBFCFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 2px;
  bottom: 2px;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #FBFCFF;
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility var(--p-motion-duration, 0s) linear var(--p-motion-duration, 0.25s);
}
.collapsible div {
  overflow: hidden;
  animation: none;
  padding: 4px;
  margin: -4px;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: true, open: false and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 2px;
  bottom: 2px;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility var(--p-motion-duration, 0s) linear var(--p-motion-duration, 0.25s);
}
.collapsible div {
  overflow: hidden;
  animation: none;
  padding: 4px;
  margin: -4px;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: true, open: true and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 2px;
  bottom: 2px;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0);
  transition: transform var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 1fr;
  visibility: visible;
  transition: grid-template-rows var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding-bottom: 8px;
}
.collapsible div {
  overflow: visible;
  animation: keyframes-overflow var(--p-motion-duration,0.25s);
  padding: 4px;
  margin: -4px;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: false, open: false and theme: light 1`] = `
":host {
  display: block !important;
  border-bottom: 1px solid #D8D8DB !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 15px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 6px;
  bottom: 6px;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility var(--p-motion-duration, 0s) linear var(--p-motion-duration, 0.25s);
}
.collapsible div {
  overflow: hidden;
  animation: none;
  padding: 4px;
  margin: -4px;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: false, open: true and theme: dark 1`] = `
":host {
  display: block !important;
  border-bottom: 1px solid #404044 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #FBFCFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 15px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 6px;
  bottom: 6px;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0);
  transition: transform var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #FBFCFF;
  display: grid;
  grid-template-rows: 1fr;
  visibility: visible;
  transition: grid-template-rows var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding-bottom: 24px;
}
.collapsible div {
  overflow: visible;
  animation: keyframes-overflow var(--p-motion-duration,0.25s);
  padding: 4px;
  margin: -4px;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: false, open: true and theme: light 1`] = `
":host {
  display: block !important;
  border-bottom: 1px solid #D8D8DB !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 15px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 6px;
  bottom: 6px;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0);
  transition: transform var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 1fr;
  visibility: visible;
  transition: grid-template-rows var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding-bottom: 24px;
}
.collapsible div {
  overflow: visible;
  animation: keyframes-overflow var(--p-motion-duration,0.25s);
  padding: 4px;
  margin: -4px;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: true, open: false and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 2px;
  bottom: 2px;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 0fr;
  visibility: hidden;
  transition: grid-template-rows var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), visibility var(--p-motion-duration, 0s) linear var(--p-motion-duration, 0.25s);
}
.collapsible div {
  overflow: hidden;
  animation: none;
  padding: 4px;
  margin: -4px;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: true, open: true and theme: light 1`] = `
":host {
  display: block !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 2px;
  bottom: 2px;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0);
  transition: transform var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #010205;
  display: grid;
  grid-template-rows: 1fr;
  visibility: visible;
  transition: grid-template-rows var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding-bottom: 8px;
}
.collapsible div {
  overflow: visible;
  animation: keyframes-overflow var(--p-motion-duration,0.25s);
  padding: 4px;
  margin: -4px;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"medium","s":"small","m":"medium","l":"small","xl":"medium"}, compact: false, open: true and theme: dark 1`] = `
":host {
  display: block !important;
  border-bottom: 1px solid #404044 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  margin: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: start;
  color: #FBFCFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 15px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  left: -4px;
  right: -4px;
  top: 6px;
  bottom: 6px;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(min-width:480px) {
  button {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    padding: 20px 0;
  }
}

@media(min-width:760px) {
  button {
    font-size: 1rem;
    padding: 15px 0;
  }
}

@media(min-width:1000px) {
  button {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    padding: 20px 0;
  }
}

@media(min-width:1300px) {
  button {
    font-size: 1rem;
    padding: 15px 0;
  }
}

@media(min-width:1760px) {
  button {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    padding: 20px 0;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover::before {
    background: rgba(148, 149, 152, .18);
  }
}

.heading {
  margin: 0;
}
.icon-container {
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  display: flex;
  align-items: center;
  justify-content: center;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font-size: .75rem;
  transform: rotate3d(0);
  transition: transform var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.collapsible {
  color: #FBFCFF;
  display: grid;
  grid-template-rows: 1fr;
  visibility: visible;
  transition: grid-template-rows var(--p-motion-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  padding-bottom: 24px;
}
.collapsible div {
  overflow: visible;
  animation: keyframes-overflow var(--p-motion-duration,0.25s);
  padding: 4px;
  margin: -4px;
}
@keyframes keyframes-overflow {
  from {
    overflow: hidden;
  }
  to {
    overflow: hidden;
  }
}"
`;
